maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:41: error: value unary_! is not a member of Unit
		} while (sommeAngle != 0 && !isDirectionFree(Direction.NORTH))
                                            ^Escaper:45: error: type mismatch;
 found   : Unit
 required: Boolean
	if (isDirectionFree(Direction.NORTH)) {
                           ^Escaper:50: error: Unit does not take parameters
		keepHandOnSideWall();
                                  ^